kubernetes/image-service-vgg19/image-service-vgg19-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: image-service-vgg19
  labels:
    app: image-service-vgg19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service-vgg19
  template:
    metadata:
      labels:
        app: image-service-vgg19
    spec:
      containers:
        - name: image-service-vgg19
          image: 'image-service-vgg19:dev'
          ports:
            - name: http
              containerPort: 5000
