kubernetes/image-service-vgg19/image-service-vgg19.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service-vgg19
spec:
  ports:
    - name: http
      targetPort: 5000
      port: 80
  selector:
    app: image-service-vgg19
